--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,3 +23,6 @@ steps:
   # Optional: if you want to allow unauthenticated access
   - '--allow-unauthenticated'
 
+  options:
+  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
+
